--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           node-version: '14.x'
       - name: Install dependencies
-        run: npm ci
+        run: npm config rm proxy
+             npm config rm https-proxy
+             unset HTTP_PROXY
+             unset HTTPS_PROXY
+             unset http_proxy
+             unset https_proxy
+             npm ci
       - name: Run unit tests
         run: npm run test
