--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint '*.js' --fix",
-    "start": "node index.js"
+    "start": "node index.js",
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +18,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "express": "^4.17.1",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
   },
   "devDependencies": {
     "eslint": "^7.32.0",
