--- a/.github/workflows/pushToDockerhub.yml
+++ b/.github/workflows/pushToDockerhub.yml
@@ -16,12 +16,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build Docker image
         run: |
-          docker build -t <your-dockerhub-username>/<your-image-name>:latest .
+          docker build -t "${{ secrets.DOCKERHUB_USERNAME }}"/"${{ secrets.DOCKERHUB_IMAGE }}":latest .
         env:
           DOCKER_BUILDKIT: 1
       - name: Push Docker image
         run: |
           echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login --username "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push <your-dockerhub-username>/<your-image-name>:latest
+          docker push "${{ secrets.DOCKERHUB_USERNAME }}"/"${{ secrets.DOCKERHUB_IMAGE }}":latest
         env:
           DOCKER_BUILDKIT: 1
