--- a/.github/workflows/deployToProduction.yml
+++ b/.github/workflows/deployToProduction.yml
@@ -2,7 +2,7 @@ name: Deploy to production
 
 on:
   workflow_run:
-    workflows: ["Unit tests"]
+    workflows: ["Unit tests on main"]
     branches:
       - main
     types:
