--- a/.github/workflows/deployToProduction.yml
+++ b/.github/workflows/deployToProduction.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: '14.x'
       - name: Install dependencies
-        run: npm ci
+        run:  npm install 
+              npm ci
       - name: Deploy to production
         run: npm run deploy
