fix: deploy again

--- a/.github/workflows/deployToProduction.yml
+++ b/.github/workflows/deployToProduction.yml
@@ -22,4 +22,5 @@ jobs:
         run:  npm install 
               npm ci
       - name: Deploy to production
-        run: npm run deploy
+        run: npm install deploy
+             npm run deploy
